fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -987,6 +987,7 @@ img {
 	line-height: 23px;
 	color: #242424;
 	opacity: 0.5;
+	text-align: center;
 }
 
 .infographic_info h5 {
